[package]
name = "marked_commands"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "games", "macro"]
categories = ["game-development"]
repository = "https://github.com/ickshonpe/marked_commands"
readme = "README.md"
description = "macro for automatic bevy entity component markers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6.0", default-features = false }